--- a/src/app/pages/lot-entry-form/lot-entry-form.component.html
+++ b/src/app/pages/lot-entry-form/lot-entry-form.component.html
@@ -24,8 +24,11 @@
                 <div>
                     <label for="producto" class="block text-sm font-medium text-gray-700 mb-1">Producto</label>
                     <select id="producto" formControlName="producto" class="block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
-                        <option value="lomo">Lomo Fino</option>
-                        <option value="costilla">Costilla de Cerdo</option>
+                        <option>Solomito Res</option>
+                        <option>Chata</option>
+                        <option>Solomo</option>
+                        <option>Punta de Anca</option>
+                        <option>Entrecotte</option>
                     </select>
                 </div>
 
