--- a/src/app/pages/lot-entry-form/lot-entry-form.component.html
+++ b/src/app/pages/lot-entry-form/lot-entry-form.component.html
@@ -12,11 +12,11 @@
                 <!-- Campo: Proveedor -->
                 <div class="md:col-span-2">
                     <label for="proveedor" class="block text-sm font-medium text-gray-700 mb-1">Proveedor</label>
+                   
                     <select id="proveedor" formControlName="proveedor" class="block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
-                        <option>Distribuidora La Pampa</option>
-                        <option>Frigorífico Andino</option>
-                        <option>Carnes del Sur</option>
-                        <option>Distribuidora La Pampa</option>
+                         @for (prov of proveedores(); track prov.id  ) {
+                        <option>{{ prov.nombre}}</option>
+                         }  
                     </select>
                 </div>
                 
