--- a/src/app/pages/lot-entry-form/lot-entry-form.component.html
+++ b/src/app/pages/lot-entry-form/lot-entry-form.component.html
@@ -49,7 +49,7 @@
 
         <!-- CAMPO AÑADIDO: Fecha de Ingreso -->
         <div>
-          <label for="fechaIngreso" class="block text-sm font-medium text-gray-700 mb-1">Fecha de Ingreso *</label>
+          <label for="fechaIngreso" class="block text-sm font-medium text-gray-700 mb-1">Fecha de Ingreso del producto a la planta*</label>
           <input type="date" id="fechaIngreso" formControlName="fechaIngreso" class="block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
         </div>
 
