--- a/src/app/pages/lotes-list/lotes-list.component.html
+++ b/src/app/pages/lotes-list/lotes-list.component.html
@@ -21,7 +21,7 @@
                         <th class="px-5 py-3">ID Lote</th>
                         <th class="px-5 py-3">Proveedor</th>
                         <th class="px-5 py-3">Producto</th>
-                        <th class="px-5 py-3">Fecha Ingreso</th>
+                        <th class="px-5 py-3">Inicio Proceso</th>
                         <th class="px-5 py-3 text-center">Estado</th>
                         <th class="px-5 py-3 text-center">Acciones</th>
                     </tr>
@@ -88,20 +88,20 @@
                         </td>
                     </tr>
                     <!-- Aquí se agregarían más filas dinámicamente -->
-                    @for(lote of loteService.lotes(); track lote.proveedorId){
+                    @for(lote of lotes(); track lote.id){
                         <tr class="border-b border-gray-200 hover:bg-gray-50">
                         <td class="px-5 py-4 text-sm">
                             <p class="text-gray-900 whitespace-no-wrap font-semibold">{{lote.loteProveedorRef}}</p>
                             <p class="text-gray-600 whitespace-no-wrap text-xs">Factura: {{lote.loteProveedorRef}}</p>
                         </td>
                         <td class="px-5 py-4 text-sm">
-                            <p class="text-gray-900 whitespace-no-wrap">{{lote.proveedorId}}</p>
+                            <p class="text-gray-900 whitespace-no-wrap">{{lote.proveedor.nombre}}</p>
                         </td>
                         <td class="px-5 py-4 text-sm">
-                            <p class="text-gray-900 whitespace-no-wrap">{{lote.productoId}}</p>
+                            <p class="text-gray-900 whitespace-no-wrap">{{lote.producto.nombreProducto}}</p>
                         </td>
                         <td class="px-5 py-4 text-sm">
-                            <p class="text-gray-900 whitespace-no-wrap">{{lote.fechaIngreso}}</p>
+                            <p class="text-gray-900 whitespace-no-wrap">{{lote.creadoEn}}</p>
                         </td>
                         <td class="px-5 py-4 text-sm text-center">
                             <span class="relative inline-block px-3 py-1 font-semibold text-yellow-900 leading-tight">
