--- a/src/app/pages/lotes-list/lotes-list.component.html
+++ b/src/app/pages/lotes-list/lotes-list.component.html
@@ -110,7 +110,7 @@
                             </span>
                         </td>
                         <td class="px-5 py-4 text-sm text-center">
-                            <a routerLink="/dashboard/process" class="bg-blue-500 hover:bg-blue-600 text-white text-xs font-bold py-2 px-4 rounded-full transition-colors">
+                            <a [routerLink]="['/dashboard/process',lote.id]" class="bg-blue-500 hover:bg-blue-600 text-white text-xs font-bold py-2 px-4 rounded-full transition-colors">
                                 Procesar
                             </a>
                         </td>
