--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="min-h-screen bg-gray-100 flex">
-    <aside class="bg-gray-800 text-white w-64 py-6 px-3 flex flex-col">
-        <app-sidebar />
-    </aside>
- 
+    <!--<aside class="bg-gray-800 text-white w-64 py-6 px-3 flex flex-col">
+      
+    </aside>-->
+      <app-sidebar />
 
   <main class="flex-1 py-6 px-8">
     <router-outlet />
